franklin (0.2-2) UNRELEASED; urgency=medium

  * Update standards version to 4.6.1.
  * Update copyright format link to https.
  * Add remote user type.
  * Escalate privileges to highest user without new password; use password from
    less privileged user.
  * Change user to _franklin.
  * Use systemd unit file instead of init script.

 -- Bas Wijnen <wijnen@debian.org>  Tue, 31 May 2022 20:13:04 +0000

franklin (0.1-1) unstable; urgency=medium

  * Initial release.

 -- Bas Wijnen <wijnen@debian.org>  Mon, 30 Nov 2015 11:22:56 -0500