@@ -1,0 +1,1 @@
+_franklin ALL=(ALL:ALL) NOPASSWD:/usr/lib/franklin/*/flash-*
